--- a/about/index.html
+++ b/about/index.html
@@ -43,17 +43,17 @@
   <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <h1><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
     <div>
-      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-base no-underline font-regular mx-6 border-b border-[#1446E7] text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </div>
   </header>
-  <section class="flex flex-col items-center justify-center flex-1">
-    <div class="fixed w-[70vw] flex flex-col z-10 pl-40">
-      <p class="text-[65px] leading-tight text-[#39474E] mb-10 font-semibold" style="font-family: Inter, sans-serif;">Hello! I'm Matias, a <span class="opacity-50 border-b border-[#39474E]">designgineer</span> from Argentina currently living in <span class="opacity-50 border-b border-[#39474E]">Madrid</span>.</p>
-      <p class="text-[65px] leading-tight text-[#39474E] ml-32 font-semibold" style="font-family: Inter, sans-serif;">With 20+ years of experience I specialize in <span class="opacity-50 border-b border-[#39474E]">interface design</span>, <span class="opacity-50 border-b border-[#39474E]">UX/UI</span>, <span class="opacity-50 border-b border-[#39474E]">holistic design systems</span> & <span class="opacity-50 border-b border-[#39474E]">front-end/back-end development</span>.</p>
+  <section class="flex flex-col items-center justify-center flex-1 h-screen overflow-hidden">
+    <div class="fixed w-[65vw] flex flex-col z-10">
+      <p class="text-[55px] leading-tight text-[#39474E] mb-10 font-semibold" style="font-family: Inter, sans-serif;">Hello! I'm Matias, a <span class="opacity-75 border-b border-[#39474E]">Design Lead & Designgineer</span> from Argentina currently living in <span class="opacity-75 border-b border-[#39474E]">Madrid</span>.</p>
+      <p class="text-[55px] leading-tight text-[#39474E] ml-16 font-semibold" style="font-family: Inter, sans-serif;">With 20+ years of experience I specialize in <span class="opacity-75 border-b border-[#39474E]">interface design</span>, <span class="opacity-75 border-b border-[#39474E]">UX/UI</span>, <span class="opacity-75 border-b border-[#39474E]">holistic design systems</span> & <span class="opacity-75 border-b border-[#39474E]">front-end/back-end development</span>.</p>
     </div>
-    <img class="absolute left-0 z-0 w-[20vw] inset-y-auto ml-40 shadow-2xl rounded-lg" src="../assets/matmac-2022.jpg" alt="Matmac"/>
+    <img class="absolute w-screen opacity-50 saturate-50 contrast-125" src="../assets/matmac-2022.jpg" alt="Matmac"/>
   </section>
   <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
