--- a/about/index.html
+++ b/about/index.html
@@ -42,11 +42,11 @@
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <h1><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
-    <div>
+    <nav role="navigation">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-base no-underline font-regular mx-6 border-b border-[#1446E7] text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
-    </div>
+    </nav>
   </header>
   <section class="flex flex-col items-center justify-center flex-1 h-screen overflow-hidden">
     <div class="fixed w-[65vw] flex flex-col z-10">
