--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
 </head>
 <body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <div class="absolute flex flex-col items-center justify-center w-screen h-screen bg-[#1446E7] z-50 transition-all animate-curtain-top origin-top">
-    <img class="mx-auto top-[50vh] mb-2" src="assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
+    <img class="mx-auto top-[50vh] mt-[-60px] md:mt-0 mb-2" src="assets/matmac-light.svg" width="101" height="17" alt="Matmac Portfolio">
     <div class="w-[100px] overflow-hidden">
       <div class="h-[1px] bg-white w-[100px] transition-all animate-slide-x origin-left"></div>
     </div>
   </div>
-  <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
+  <header class="fixed h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
     <h1><a href="/"><img src="./assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
-    <div>
+    <nav role="navigation" class="invisible md:visible">
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
-    </div>
+    </nav>
   </header>
   <section class="flex flex-col items-center justify-center flex-1">
-    <div class="relative">
-      <div class="absolute inset-2/4 -ml-[3.125rem] -mt-[55px] z-[40] w-[100px] h-[50px]">
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://web.resource.org/cc/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+    <div class="relative -mt-[120px] md:-mt-0">
+      <div class="absolute inset-2/4 ml-[-35px] md:ml-[-50px] mt-[-37px] md:mt-[-55px] z-[40] w-[70px] md:w-[100px] h-[35px] md:h-[50px]">
+        <svg class="w-full" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://web.resource.org/cc/" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
           version="1.1"
           baseProfile="full"
           width="100px"
@@ -124,17 +124,17 @@
         </g>
         </svg>
       </div>
-      <img class="absolute top-0 right-0 z-20 animate-spin-reverse" src="assets/available.svg" alt="Matmac - Available for freelance and contract work" />
-      <img class="relative z-10 mt-10" src="assets/matmacintosh.png" width="300" height="300" alt="Matmac Portfolio"/>
+      <img class="absolute top-2 md:top-0 -right-1 md:right-0 z-20 animate-spin-reverse w-[90px] md:w-[127px]" src="assets/available.svg" alt="Matmac - Available for freelance and contract work" />
+      <img class="relative z-10 mt-10 w-[200px] h-[200px] md:w-[300px] md:h-[300px]" src="assets/matmacintosh.png" alt="Matmac Portfolio"/>
     </div>
-    <h2 class="max-w-[50vw] text-center mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold" style="font-family: Inter, sans-serif; font-size: 70px;">I'm Matias Bejas, Design Lead & UX/UI Expert</h2>
-    <h3 class="max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] text-[20px] font-regular" style="font-family: Inter, sans-serif;">I help industry leaders & startups create remarkable user-driven experiences</h3>
+    <h2 class="max-w-[85vw] md:max-w-[50vw] text-center mt-[-28px] md:mt-[-45px] leading-none tracking-tight text-[#39474E] font-semibold text-[32px] md:text-[70px]" style="font-family: Inter, sans-serif;">I'm Matias Bejas, Design Lead & UX/UI Expert</h2>
+    <h3 class="max-w-[85vw] md:max-w-[50vw] text-center mt-8 leading-none text-[#8A9AA3] md:text-[20px] sm:text-[20px] font-regular" style="font-family: Inter, sans-serif;">I help industry leaders & startups create remarkable user-driven experiences</h3>
   </section>
-  <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+  <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
-      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
-      <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
-      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
+      <a class="text-[#39474E] hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
+      <a class="text-[#39474E] mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
+      <a class="text-[#39474E] hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
     </div>
     <div>
       &copy; Copyright
