--- a/projects/helzi/index.html
+++ b/projects/helzi/index.html
@@ -11,14 +11,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Matmac Portfolio</title>
 </head>
-<body class="p-0 m-0 flex flex-1 h-screen justify-center" style="background-color: #DFDFDF;">
+<body class="flex justify-center flex-1 h-screen p-0 m-0" style="background-color: #DFDFDF;">
   <header class="fixed h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
     <a href="/"><img src="../../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
-    <div>
+    <nav role="navigation">
       <a class="text-base font-regular border-b border-[#1446E7] text-[#1446E7]" href="../../projects" style="font-family: Inter, sans-serif;">Projects</a>
       <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
-    </div>
+    </nav>
   </header>
   <iframe style="border: 0 none; display: block; background: #e5e5e5;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2Fq0kan3jZ1fNHzxcd69WeBT%2FPortfolio-Helzi%3Fpage-id%3D0%253A1%26node-id%3D2%253A105%26viewport%3D241%252C48%252C0.68%26scaling%3Dmin-zoom%26starting-point-node-id%3D2%253A105%26hide-ui%3D1" allowfullscreen></iframe>
   <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
