--- a/projects/index.html
+++ b/projects/index.html
@@ -22,85 +22,85 @@
   </style>
 </head>
 <body class="flex justify-center flex-1 p-0 m-0 overflow-hidden md:h-screen" style="background-color: #DFDFDF;">
-  <header class="fixed top-0 h-[100px] flex items-center flex-row px-12 justify-between w-screen z-10">
-    <a href="/"><img src="../assets/logo-matmac.svg" alt="Matmac - Design Manager"></a>
-    <nav role="navigation">
-      <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="/projects" style="font-family: Inter, sans-serif;">Projects</a>
-      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="/about" style="font-family: Inter, sans-serif;">About</a>
+  <header class="fixed top-0 h-[60px] md:h-[100px] flex items-center flex-row px-6 md:px-12 justify-between w-screen z-10">
+    <h1><a href="/"><img src="../assets/logo-matmac.svg" width="100" height="25" alt="Matmac - Design Manager"></a></h1>
+    <nav role="navigation" class="invisible md:visible">
+      <a class="text-base no-underline font-regular border-b border-[#1446E7] text-[#1446E7]" href="../projects/" style="font-family: Inter, sans-serif;">Projects</a>
+      <a class="text-[#39474E] text-base no-underline font-regular mx-6 hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../about/" style="font-family: Inter, sans-serif;">About</a>
       <a class="text-[#39474E] text-base no-underline font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
     </nav>
   </header>
   <section class="flex flex-col items-center justify-center flex-1 overflow-hidden">
-    <ul class="flex flex-row items-center w-screen h-screen overflow-x-auto snap-x snap-mandatory no-scrollbar">
-      <li class="mr-24 snap-center">
-        <div class="w-[30vw] h-[450px]"></div>
+    <ul class="flex flex-row items-center w-screen h-screen overflow-x-auto snap-x snap-mandatory no-scrollbar mt-[-48px] md:mt-0">
+      <li class="hidden mr-24 snap-center md:flex">
+        <div class="w-[10vw] md:w-[30vw] h-[100px] md:h-[450px]"></div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 ml-9 md:mr-12 snap-center md:ml-0">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="flex" href="./helzi/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/helzi.jpg" alt="Helzi project"></a>
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="flex" href="./amazon/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/amazon.jpg" alt="Amazon project"></a>
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="flex" href="./linkedin/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/linkedin.jpg" alt="Linkedin project"></a>
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <a class="flex" href="./sony/"><img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/sony.jpg" alt="Sony project"></a>
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/posters.jpg" alt="Posters project">
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/flow.jpg" alt="Flow project">
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/holafly.jpg" alt="Holafly project">
           </div>
         </div>
       </li>
-      <li class="mr-12 snap-center">
-        <div class="w-[30vw] h-[450px] flex">
-          <div class="bg-white flex flex-1 mx-12 rounded-lg overflow-hidden drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
+      <li class="mr-4 md:mr-12 snap-center">
+        <div class="w-[80vw] md:w-[30vw] h-[320px] md:h-[450px] flex">
+          <div class="bg-white flex flex-1 mx-4 md:mx-12 rounded-lg overflow-hidden md:drop-shadow-2xl hover:drop-shadow-[0_30px_30px_rgba(0,0,0,0.15)]">
             <img class="object-cover object-left-top transition-all duration-[1000ms] hover:scale-105" src="../assets/projects-slides/tnl.jpg" alt="Tradenolimits project">
           </div>
         </div>
       </li>
       <li class="snap-center">
-        <div class="w-[30vw] h-[450px]"></div>
+        <div class="w-[10vw] md:w-[30vw] h-[100px] md:h-[450px]"></div>
       </li>
     </ul>
   </section>
-  <footer class="fixed bottom-0 w-screen mb-8 px-12 text-[#39474e] text-base flex flex-row justify-between" style="font-family: Inter, sans-serif;">
+  <footer class="fixed bottom-0 w-screen mb-8 px-6 md:px-12 text-[#39474e] text-xs md:text-base font-regular flex flex-row justify-between" style="font-family: Inter, sans-serif;">
     <div>
-      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
-      <a class="text-[#39474E] font-regular mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
-      <a class="text-[#39474E] font-regular hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
+      <a class="text-[#39474E] hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="https://www.linkedin.com/in/matiasbejas/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Linkedin</a>
+      <a class="text-[#39474E] mx-6 hover:border-b hover:border-[#ea4c89] hover:text-[#ea4c89]" href="https://dribbble.com/matmac" rel="noopener noreferrer"target="_blank" style="font-family: Inter, sans-serif;">Dribbble</a>
+      <a class="text-[#39474E] hover:border-b hover:border-[#bc2a8d] hover:text-[#bc2a8d]" href="https://www.instagram.com/thematmac/" rel="noopener noreferrer" target="_blank" style="font-family: Inter, sans-serif;">Instagram</a>
     </div>
     <div>
       &copy; Copyright
