--- a/about/index.html
+++ b/about/index.html
@@ -65,8 +65,8 @@
         <span class="w-[32px] h-0.5 relative z-[1] my-1.5 bg-slate-400 flex peer-checked:animate-rotate-hamburguer-inverse"></span>
         <span class="w-[32px] h-0.5 relative z-[1] bg-slate-400 flex origin-[0%_100%] origin-top transform-all peer-checked:opacity-0"></span>
         <div class="fixed inset-0 bg-[#dfdfdf] shadow-xl top-0 flex flex-col translate-x-[-120%] duration-500 items-center justify-center transition-all peer-checked:translate-x-0">
-          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="./projects" style="font-family: Inter, sans-serif;">Projects</a>
-          <a class="text-base no-underline font-regular text-2xl my-12 border-b border-[#1446E7] text-[#1446E7]" href="./about" style="font-family: Inter, sans-serif;">About</a>
+          <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="../projects" style="font-family: Inter, sans-serif;">Projects</a>
+          <a class="text-base no-underline font-regular text-2xl my-12 border-b border-[#1446E7] text-[#1446E7]" href="../about" style="font-family: Inter, sans-serif;">About</a>
           <a class="text-[#39474E] text-base no-underline font-regular text-2xl hover:border-b hover:border-[#1446E7] hover:text-[#1446E7]" href="mailto:hello@matmac.design" style="font-family: Inter, sans-serif;">Contact</a>
         </div>
       </div>
